# stigma

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
ai_crew/: apps.py  crew.py  forms.py  tasks.py  test_crew.py  tools.py  urls.py  views.py
ai_crew/config/: agents.yaml  agents_en.yaml  agents_id.yaml  tasks.yaml  tasks_en.yaml  tasks_id.yaml
ai_crew/migrations/: 0001_initial.py
blog/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
blog/management/commands/: seed_data.py
blog/migrations/: 0001_initial.py  0002_rename_blog_post_status_pub_idx_blog_post_status_5b2843_idx_and_more.py  0003_uuidtaggeditem_alter_post_tags.py
blog/templatetags/: blog_extras.py
docs/: ADD.md  CHANGELOG.md  CONTRIBUTING.md  USAGE.md
docs/adr/: ADR-001-django-framework.md  ADR-002-crewai-integration.md  ADR-003-postgresql.md  ADR-004-tailwindcss.md  ADR-005-htmx-hyperscript.md  ADR-006-threading-task-management.md  ADR-007-celery-worker-orchestration.md  ADR-008-internal-linking-tool.md  ADR-009-distribution-automation.md  ADR-010-admin-ui-refinement.md  ADR-011-htmx-spa-architecture.md  ADR-012-multilingual-ai-pipelines.md
static/css/: admin-mono.css  stigma.css
static/js/: stigma.js
stigma/: celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/admin/: base_site.html
templates/ai_crew/: generate.html
templates/ai_crew/partials/: status_done.html  status_error.html  status_running.html
templates/blog/: about.html  category_detail.html  home.html  post_detail.html  post_list.html  search.html  tag_detail.html
templates/blog/partials/: comment.html  post_list_items.html  search_live_results.html
