[project]
name = "stigma"
version = "0.1.0"
description = "STIgma — AI-powered blog platform built with Django & CrewAI"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "django>=6.0",
    "psycopg[binary]",
    "python-dotenv",
    "crewai[litellm]",
    "crewai-tools",
    "pillow",
    "django-markdownx",
    "markdown",
    "bleach",
    "django-taggit",
    "whitenoise",
    "gunicorn",
    "celery",
    "redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "pytest-django",
    "pytest",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "stigma.settings"
python_files = ["tests.py", "test_*.py"]
